# genio-tools

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
aiot/: __init__.py  app.py  board.py  boardcontrol_linux.py  boardcontrol_win.py  bootrom.py  bootrom_log_parser.py  config.py  efuse.py  fastboot.py  flash.py  flash_daemon.py  flash_worker.py  flashtool.py  ftdi.py  ftdi_win.py  mtd_demo.py  multi_download_cli.py  rpmb.py  ubootenv.py
aiot/image/: __init__.py  android.py  bootfirmware.py  raw.py  ubuntu.py  yocto.py
docs/: conf.py  index.rst
rity/: __init__.py  app.py  board.py  config.py  flash.py  ftdi.py
rity/image/: __init__.py  android.py  yocto.py
snap/: snapcraft.yaml
snap/scripts/: install-udev-rules.sh
tools/: rity-board  rity-config  rity-flash
